fix: resolve SPA routing issues for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/" />
     <title>Dev Portfolio | Senior Frontend Engineer</title>
     <meta name="description" content="Senior Frontend Engineer especializado em React, TypeScript e arquiteturas modernas de frontend." />
     <meta name="author" content="Senior Frontend Developer" />
