fix(SEO): :bug: update og:url to the right one

--- a/scripts/generate-og-image.html
+++ b/scripts/generate-og-image.html
@@ -116,7 +116,7 @@
     </div>
     
     <div class="url">
-      <span class="accent">jaosalles.dev</span>
+      <span class="accent">jaosalles.github.io/joao-salles-portfolio</span>
     </div>
   </div>
 </body>
