fix(SEO): :bug: update SEO to match with more oportunits on linkedin

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dev Portfolio | Senior Frontend Engineer</title>
     <meta
       name="description"
-      content="Senior Frontend Engineer especializado em React, TypeScript e arquiteturas modernas de frontend."
+      content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
     <meta name="author" content="João Pedro Salles" />
     <meta name="theme-color" content="#1a1a1a" />
@@ -34,7 +34,7 @@
     <meta property="og:title" content="Dev Portfolio | Senior Frontend Engineer" />
     <meta
       property="og:description"
-      content="Senior Frontend Engineer especializado em React, TypeScript e arquiteturas modernas de frontend."
+      content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
     <meta property="og:image" content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png" />
     <meta property="og:site_name" content="João Pedro Salles Portfolio" />
@@ -46,7 +46,7 @@
     <meta name="twitter:title" content="Dev Portfolio | Senior Frontend Engineer" />
     <meta
       name="twitter:description"
-      content="Senior Frontend Engineer especializado em React, TypeScript e arquiteturas modernas de frontend."
+      content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
     <meta name="twitter:image" content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png" />
     <meta name="twitter:creator" content="@jaosalles" />
