--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
       property="og:description"
       content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
-    <meta property="og:image" content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png" />
+    <meta
+      property="og:image"
+      content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png"
+    />
     <meta property="og:site_name" content="João Pedro Salles Portfolio" />
     <meta property="og:locale" content="pt_BR" />
 
@@ -48,16 +51,31 @@
       name="twitter:description"
       content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
-    <meta name="twitter:image" content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png" />
+    <meta
+      name="twitter:image"
+      content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png"
+    />
     <meta name="twitter:creator" content="@jaosalles" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://jaosalles.github.io/joao-salles-portfolio/" />
 
     <!-- Alternate Language Versions -->
-    <link rel="alternate" hreflang="pt-BR" href="https://jaosalles.github.io/joao-salles-portfolio/" />
-    <link rel="alternate" hreflang="en" href="https://jaosalles.github.io/joao-salles-portfolio/?lang=en" />
-    <link rel="alternate" hreflang="x-default" href="https://jaosalles.github.io/joao-salles-portfolio/" />
+    <link
+      rel="alternate"
+      hreflang="pt-BR"
+      href="https://jaosalles.github.io/joao-salles-portfolio/"
+    />
+    <link
+      rel="alternate"
+      hreflang="en"
+      href="https://jaosalles.github.io/joao-salles-portfolio/?lang=en"
+    />
+    <link
+      rel="alternate"
+      hreflang="x-default"
+      href="https://jaosalles.github.io/joao-salles-portfolio/"
+    />
 
     <!-- Sitemap -->
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
