style(seo): :lipstick: update og image

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       content="Senior Frontend Engineer disponível para oportunidades remotas. Expert em React, TypeScript, Next.js e desenvolvimento de aplicações web escaláveis de alta performance."
     />
     <meta
+      name="image"
       property="og:image"
       content="https://jaosalles.github.io/joao-salles-portfolio/og-image.png"
     />
