--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-
+    <meta name="google-site-verification" content="GDm7v6YTbyyAi2l6Avsyn2xcoCbkLaHvh3qfPls3WQk" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jaosalles.github.io/joao-salles-portfolio/" />
